# codeworld-auth

./: .gitignore  README.md  codeworld-auth.cabal  stack.yaml
app/: Main.hs
lib/CodeWorld/: Auth.hs
lib/CodeWorld/Auth/: GoogleAuth.hs  Internal.hs  LocalAuth.hs  Secret.hs
