
name:                                       codeworld-auth
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/codeworld-auth#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/codeworld-auth.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            aeson
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , codeworld-account
                                          , directory
                                          , filepath
                                          , jwt
                                          , snap-core
                                          , split
                                          , text
                                          , time
                                          , transformers
                                          , unordered-containers
  exposed-modules:                          CodeWorld.Auth
                                          , CodeWorld.Auth.GoogleAuth
                                          , CodeWorld.Auth.Http
                                          , CodeWorld.Auth.Internal
                                          , CodeWorld.Auth.LocalAuth
                                          , CodeWorld.Auth.Time
                                          , CodeWorld.Auth.Types
                                          , CodeWorld.Auth.Util
